...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guidelineTeam2"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Real Madrid" />

            <Button
                android:id="@+id/btnBet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/bet"
                android:background="@drawable/button_background"
                android:backgroundTint="@color/primary500"
                app:layout_constraintBottom_toTopOf="@+id/tvBet"
                app:layout_constraintEnd_toStartOf="@+id/guidelineTeam2"
                app:layout_constraintStart_toEndOf="@+id/guidelineTeam1"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBet"
...
